--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://artist-instance.cceufdtj9y2g.eu-west-2.rds.amazonaws.com:3306/AWSCloud
+spring.datasource.username=Joshua
+spring.datasource.password=
