--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,21 @@
 		</dependency>
 
 
+
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.apache.tomcat</groupId>-->
 <!--			<artifactId>tomcat-jdbc</artifactId>-->
