--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,6 @@
 		</dependency>
 
 
-
 		<dependency>
 			<groupId>com.github.ulisesbocchio</groupId>
 			<artifactId>jasypt-spring-boot-starter</artifactId>
@@ -65,6 +64,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security</groupId>-->
+<!--			<artifactId>spring-security-config</artifactId>-->
+<!--			<version>4.1.3.RELEASE</version>-->
+<!--		</dependency>-->
 <!--		<dependency>-->
 <!--			<groupId>org.apache.tomcat</groupId>-->
 <!--			<artifactId>tomcat-jdbc</artifactId>-->
