--- a/src/main/java/com/JSG/JSGApplication/myproject/package.json
+++ b/src/main/java/com/JSG/JSGApplication/myproject/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "4.1.3",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-cookie": "3.0.4",
     "react-dom": "^16.13.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
-    "reactstrap": "6.5.0"
+    "reactstrap": "6.5.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
