password to access database is now encrypted

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://artist-instance.cceufdtj9y2g.eu-west-2.rds.amazonaws.com:3306/AWSCloud
 spring.datasource.username=Joshua
-spring.datasource.password=
+spring.datasource.password=ENC(a8NGqUC5d7reZrAyj9R36NqycFjWmQkp)
+jasypt.encryptor.password=PasswordKey
+
+
