--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ pipeline{
         stage('Testing Stage'){
             steps{
                 withMaven(maven: 'maven_4_0_0'){
-                    sh 'mvn '
+                    sh 'mvn test '
                 }
             }
         }
