--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,5 +18,15 @@ pipeline{
                 }
             }
         }
+
+
+
+        stage('Deployment Stage'){
+            steps{
+            withMaven(maven: 'maven_4_0_0'){
+                sh 'mvn deploy'
+            }
+            }
+        }
     }
 }
